Workflow bugs, themefixes and refactored location display to a js class - Simple workflow action couldn't re-display its values from the rule edit dialog - New repo doclienst webscript: slingshot/documentlibrary/location.get for resolving a file/folder's repo- (& site-) locations - New class Alfresco.Location that takes a nodeRef and figures out how it shall be displayed regardin to where user is browsing and if folder is in a site or not - Run in background option in rule edit now in right column to save vertical space - The "When" rule config section's select drop down is now wider so its fully readable - Flash upload now looks ok in all themes - Rules list "Inherited from"-link now working correctly - alfresco.js' combinePaths() now handles null values
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@19619 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/components/rules/rule-edit.css
+++ b/root/projects/slingshot/source/web/components/rules/rule-edit.css
@@ -32,7 +32,7 @@
 .rule-edit .form-field
 {
    float: left;
-   width: 31em;
+   width: 29em;
 }
 
 .rule-edit .rule-form input[type=text]
@@ -66,28 +66,27 @@
 
 .rule-edit h2,
 .rule-edit .form-field.description,
-.rule-edit .form-field.executeAsynchronously,
-.rule-edit .form-field.scriptLocation,
+.rule-edit .form-field.applyToChildren,
 .rule-edit .main-buttons
 {
    clear: both;
 }
 
-.rule-edit .form-field.disabled
-{
-   padding-bottom: 1em;
-}
-
-.rule-edit .form-field.title,
-.rule-edit .form-field.executeAsynchronously
+.rule-edit .form-field.title
 {
    padding-bottom: 0.5em;
+}
+
+.rule-edit .form-field.scriptLocation,
+.rule-edit .form-field.applyToChildren
+{
+   min-height: 2.5em;
+   line-height: 2.5em;
 }
 
 .rule-edit .form-field.scriptLocation
 {
    margin-left: 1.6em;
-   width: 40em;
 }
 
 .rule-edit .main-buttons
