--- a/root/projects/slingshot/source/web/themes/default/presentation.css
+++ b/root/projects/slingshot/source/web/themes/default/presentation.css
@@ -595,6 +595,29 @@ body.yui-skin-default .yuimenu .bd ul li.yuimenuitem .yuimenuitemlabel-disabled
 
 /*end YUI Menu */
 
+/* Location */
+
+.yui-skin-default .location-path,
+.yui-skin-default .location-site
+{
+   background-position: left 50%;
+   background-repeat: no-repeat;
+   padding: 2px 0 2px 20px;
+}
+
+.yui-skin-default .location-path
+{
+   background-image: url(../../components/documentlibrary/images/folder-closed-16.png);
+   margin-left: 0.5em;
+}
+
+.yui-skin-default .location-site
+{
+   background-image: url(../../components/images/site-16.png);
+}
+
+/* end Location*/
+
 /* Doclist */
 
 body.yui-skin-default .doclist .more-actions a:active,
