--- a/root/projects/slingshot/source/web/themes/greenTheme/presentation.css
+++ b/root/projects/slingshot/source/web/themes/greenTheme/presentation.css
@@ -600,6 +600,29 @@ body.yui-skin-greenTheme .yuimenu .bd ul li.yuimenuitem .yuimenuitemlabel-disabl
 
 /*end YUI Menu */
 
+/* Location */
+
+.yui-skin-greenTheme .location-path,
+.yui-skin-greenTheme .location-site
+{
+   background-position: left 50%;
+   background-repeat: no-repeat;
+   padding: 2px 0 2px 20px;
+}
+
+.yui-skin-greenTheme .location-path
+{
+   background-image: url(../../components/documentlibrary/images/folder-closed-16.png);
+   margin-left: 0.5em;
+}
+
+.yui-skin-greenTheme .location-site
+{
+   background-image: url(../../components/images/site-16.png);
+}
+
+/* end Location*/
+
 /* Doclist */
 
 body.yui-skin-greenTheme .doclist .more-actions a:active,
